@@ -14,6 +14,7 @@ version 1.0 -- UNRELEASED
 	   example.dup.
 	 . Add support for RackSpace's CloudFiles.
 	   Thanks to Yuval Kogman <nothingmuch@woobling.org> for the patch.
+	 . Support bandwidthlimit with new duplicity, using trickle.
 	mysql:
 	 . Don't attempt to dump performance_schema database (Redmine#3741).
     build system changes
